<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ISO Mounter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mount_destination">Mount Destination</string>
    <string name="title_activity_summary">Summary</string>
    <string name="source">Source:</string>
    <string name="select_directory">Select directory</string>
    <string name="destination">Destination:</string>
    <string name="mount">Mount</string>
    <string name="choose_file">Choose file</string>
    <string name="mount_to">Mount to...</string>
    <string name="iso_image">ISO Image</string>
    <string name="open_file_manager">Open file manager</string>
    <string name="explore_image">Explore image</string>
    <string name="optional_parameters">Optional parameters:</string>
    <string name="title_activity_iso_explore">IsoExploreActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_export_destination">ExportDestinationActivity</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

</resources>
